# qt-ini-edit

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.bat  build.sh  config0.ini  config2.ini  inifile-test.cpp  inifile.cpp  inifile.h  inimodel.cpp  inimodel.h  install-deps.sh  main.cpp  main.h  mainwindow.cpp  mainwindow.h  qt-ini-edit.bat  qt-ini-edit.sh  run-tests.bat  run-tests.sh  strs-test.cpp  strs.cpp  strs.h
.github/workflows/: ccpp.yaml
